--- a/selectstars/src/components/AllMentorsList/allMentors.css
+++ b/selectstars/src/components/AllMentorsList/allMentors.css
@@ -1,15 +1,34 @@
 
     .allMentors-page {
-        background-color: #8246AF;
+        background-color: white;
         padding-bottom: 20%;
     }
 
+    .allMentorsPage-title {
+        background-image: url(https://shecodes.com.au/wp-content/uploads/2021/10/She-Codes-113.jpg);
+        background-position: center center;
+        background-size: cover;
+        padding-bottom: 30px;
+        position: relative;
+        z-index: 1;
+       
+    }
+
     .allMentorsPage-title h1 {
-        font-size: 42px;
+        /* color: #8246AE;
+        text-align: center;
+        padding-top: 2%;
+        padding-bottom: 1;
+        font-family: 'Bebas Neue', cursive;
+        font-size: 48px; */
+        font-size: 48px;
         color: #F5F5F5;
         text-align: center;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        z-index: 1; 
+        position: relative;
+        font-family: 'Bebas Neue', cursive;
     }
     .allMentorSection{
 
