--- a/selectstars/src/components/CreateUserForm/createUserForm.css
+++ b/selectstars/src/components/CreateUserForm/createUserForm.css
@@ -28,16 +28,22 @@
 } */
 
 .register-page {
-    background-color: #8246ae;
-    /* height: 100%; */
+    background-color: white;
+    height: 100%;
     padding-bottom: 30px;
+    background-image: url(https://shecodes.com.au/wp-content/uploads/2021/10/Artboard-1-2.svg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .register-page h1 {
-    color: #F5F5F5;
+    color: #8246ae;
     text-align: center;
     padding-top: 2%;
     padding-bottom: 1;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 48px;
 }
 
 .register-page .register-form {
@@ -45,10 +51,11 @@
     max-width: 70%;
     padding: 3%;
     border-radius: 10px;
-    box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
-    background-color: #F5F5F5;
+    box-shadow: 1px 1px 5px #c0b0cb;
+    background-color: white;
     display: flex;
     flex-direction: column;
+  
 }
 
 
@@ -58,7 +65,7 @@
     display: flex;
     align-items: flex-end;
     width: 100%;
-}
+}   
 
 .signUpField label {
     display: inline-block;
@@ -74,12 +81,17 @@
 .signUpField input {
     display: inline-block;
     width: 100%;
-    border: none;
-    border-radius: 5px;
+    /* border: none; */
+    /* border-radius: 5px; */
     padding: 1;
     font-size: 16px;
     color: #333;
-    background-color: white;
+    /* background-color: white; */
+    border: 2px solid #c0b0cb;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+
 }
 
 .signUpField button[type="submit"] {
