--- a/selectstars/src/components/Footer/Footer.css
+++ b/selectstars/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    background-color: #f5f5f5;
+    background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -7,6 +7,9 @@
     height: auto;
     padding: 20px;
     font-size: 14px;
+    box-shadow: 0 2px 15px 0 rgba(98, 96, 96, 0.16), 0 2px 10px 0 rgba(102, 102, 102, 0.12);
+   
+
 }
 
 .social-icons {
