--- a/selectstars/src/components/MentorCard/card.css
+++ b/selectstars/src/components/MentorCard/card.css
@@ -1,37 +1,83 @@
+
 .mentorProfile_card {
     width: 100%;
     height: auto;
     background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 5px #c0b0cb;
     border-radius: 10px;
     padding: 3.5%;
     margin: 1em;
     cursor: pointer;
-    box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+    /* box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03); */
     transition: all ease 200ms;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    
+}
+
+.mentorProfile_card:hover {
+    transform: scale(1.05);
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: row;
+
+}
+
+
+.mentorCardText {
+    display: flex;
+    flex-direction: column;
+
+}
+
+#mentorName {
+    text-align: center;
+    font-family: 'Bebas Neue', cursive;
+    color: #5f5f5f;
+    font-size: 35px;
+    /* display: flex; */
+    
 }
 
 .mentorProfile_card img {
-    width: 200px;
-    height: 200px;
+   
+    height: 150px;
     object-fit: scale-down;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 20px;
+    border-radius: 10px;
+   
+}
+
+.mentorCardText {
+   
+    margin-left: 30px;
+    margin-top: 20px;
+   
 }
 
 .mentorProfile_card .mentorname {
     font-size: 24px;
     color: #8246AE;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-weight: bold;
 }
+
 
 .mentorProfile_card a {
     text-decoration: none;
 }
 
 .mentorProfile_card h6 {
-    font-size: 18px;
-    margin-bottom: 5px;
+    font-size: 13px;
+    margin-bottom: 10px;
     color: black;
     display: inline-block;
     padding-right: 0.5rem;
@@ -48,6 +94,8 @@
 .mentorCardText div{
     display: flexbox;
     justify-content: start;
+    font-size: 13px;
+    margin-bottom: 10px;
 }
 
 @media screen and (max-width: 480px) {
