--- a/selectstars/src/components/Nav/nav.css
+++ b/selectstars/src/components/Nav/nav.css
@@ -2,11 +2,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #E8E2E2;
+  /* background-color: #E8E2E2; */
+  background-color: white;
   padding: 3%;
   width: 100%;
   height: 90px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 15px 0 rgba(98, 96, 96, 0.16), 0 2px 10px 0 rgba(102, 102, 102, 0.12);
+  position: relative;
+  z-index: 10;  
 
 }
 
@@ -63,7 +66,7 @@ body {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background-color: #E8E2E2;
+  background-color: white;
   padding: 30px;
   width: 100%;
   height: 90px;
