--- a/selectstars/src/index.css
+++ b/selectstars/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:wght@200;300&display=swap');
+:root {
+  font-family: 'Bebas Neue', 'Raleway';
+  
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
